# Orca_Trading_Yuki

./: .env.example  .gitignore  DEPLOYMENT.md
backend/: pyproject.toml  requirements.txt
backend/api/: index.py
backend/data/dynamic/processed/: reflection_postmortem_nvda_2025_05_26_nvda_nvidia_post_earnings_momentum_setup_postmortem.json  (+2 more)
backend/data/indexes/: local_test_index.json
backend/data/manifests/: dynamic_source_template.json  foundation_eval_set_template.json  foundation_taxonomy.json  knowledge_eval_set_template.json  knowledge_manifest.json
backend/examples/: __init__.py  dynamic_scheduler_cli.md  foundation_knowledge.md  knowledge_api.md  knowledge_closed_loop_demo.py  knowledge_evaluation.md  knowledge_quality_audit.md
backend/src/: app.py
backend/src/api/: __init__.py  contracts.py  knowledge_api.py  postgres_run_store.py  run_store.py  server.py  sqlite_run_store.py
backend/src/config/: __init__.py  settings.py
backend/src/knowledge/: __init__.py  collector_service.py  documents.py  evaluation.py  evaluation_cli.py  foundation.py  indexing.py  ingest.py  policy.py  quality.py  record.py  repository.py  retriever.py  source_governance.py  source_scheduler.py  source_scheduler_cli.py
backend/src/llm/: __init__.py  anthropic_client.py  client.py  factory.py  langchain_factory.py  mock_client.py  openai_client.py
backend/src/models/: __init__.py  analyst.py  decision.py  knowledge.py  memory.py  observation.py  reflection.py  workflow.py
backend/src/routes/: __init__.py  knowledge.py
backend/src/skills/: README.md  __init__.py
(+149 files in other folders)
