[project]
name = "orca-trading-yuki-backend"
version = "0.1.0"
description = "Placeholder Python backend for Orca Trading Yuki."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-anthropic>=0.3.0,<1.0.0",
    "langchain-core>=1.4.0,<2.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
