[project]
name = "orca-trading-yuki-backend"
version = "0.1.0"
description = "Placeholder Python backend for Orca Trading Yuki."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
orca-knowledge-eval = "backend.src.knowledge.evaluation_cli:main"
orca-knowledge-scheduler = "backend.src.knowledge.source_scheduler_cli:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.25",
]
dev = [
    "pytest>=8.0",
]
